Fix slideshow padding on mobiles

--- a/src/scss/blocks/nova-blocks/_style.scss
+++ b/src/scss/blocks/nova-blocks/_style.scss
@@ -1,5 +1,7 @@
 .novablocks-u-content-padding {
-    padding-top: calc(var(--site-header-height) + 1.5 * var(--theme-spacing-medium));
+    @include above(lap) {
+        padding-top: calc(var(--site-header-height) + 1.5 * var(--theme-spacing-medium));
+    }
 }
 
 .novablocks-block__content {
