--- a/src/scss/blocks/nova-blocks/slideshow/_style.scss
+++ b/src/scss/blocks/nova-blocks/slideshow/_style.scss
@@ -1,3 +1,11 @@
+.novablocks-slideshow {
+    
+    .novablocks-u-content-padding {
+        padding-left: calc(var(--theme-wrapper-sides-spacing) + 50px);
+        padding-right: calc(var(--theme-wrapper-sides-spacing) + 50px);
+    }
+}
+
 .novablocks-slideshow__arrow {
     width: 50px;
     height: 50px;
